cmake_minimum_required(VERSION 3.25)
project(untitled1 C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled1 main.c Programmers/120820.c Programmers/120807.c Programmers/120803.c Programmers/120804.c Programmers/120805.c Programmers/120810.c Programmers/120802.c Programmers/120806.c Programmers/120829.c Programmers/120831.c Programmers/120817.c Programmers/120830.c Programmers/12941.c Programmers/12937.c Codeup/1104.c Codeup/2313.c Codeup/1526.c Codeup/1527.c Codeup/1528.c Codeup/1529.c)
